[gd_scene load_steps=6 format=3 uid="uid://bj4udttockbsa"]

[ext_resource type="Script" path="res://Scripts/PauseComponent.gd" id="1_1okam"]
[ext_resource type="Texture2D" uid="uid://d3nb73x64y635" path="res://Assets/Icons/pause_image.png" id="2_vnb8k"]
[ext_resource type="Texture2D" uid="uid://cyft7u6miida0" path="res://Assets/Icons/resume_button.png" id="3_rvw7h"]
[ext_resource type="Texture2D" uid="uid://crn4vbxli7oyi" path="res://Assets/Icons/options_button.png" id="4_oqa2m"]
[ext_resource type="Texture2D" uid="uid://naua6pwj4jw4" path="res://Assets/Icons/quit_button.png" id="5_c7glv"]

[node name="PauseComponent" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1okam")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.556863)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -90.0
offset_right = 156.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_vnb8k")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="resume_button" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_rvw7h")

[node name="options_button" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_oqa2m")

[node name="quit_button" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_c7glv")

[connection signal="pressed" from="VBoxContainer/VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
